# dms-rs

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: errors.rs  lib.rs
api/src/dictionaries/: dictionary-de.json  dictionary-en.json  dictionary-ru.base.json  dictionary-ru.json
cli/: Cargo.toml
cli/src/: args.rs  main.rs  test.json
dictionaries/: dictionary-de.json  dictionary-en.json  dictionary-ru.base.json
