[package]
name = "api"
version = "0.2.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["full"] }
rayon = { version = "1.10.0" }
regex = "1.10.5"
thiserror = "1.0.63"
futures = "0.3.30"
