[package]
name = "dms"
version = "0.3.0"
edition = "2021"
authors = ["Alexander Karavaichik <sashagameac@gmail.com>"]
description = "CLI Utility for the auto-translator project"

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
api = { path = "../api"}
tokio = { version = "*", features = ["full"]}
reqwest = "0.12.5"